refactor: clean up unused imports and update table header label

--- a/src/app/lazy-loaded/tabel/tabel.component.html
+++ b/src/app/lazy-loaded/tabel/tabel.component.html
@@ -8,7 +8,7 @@
                 <th nzWidth="20%">Name</th>
                 <th nzWidth="20%">Character</th>
                 <th nzWidth="20%">Birth date</th>
-                <th nzWidth="20%">Action</th>
+                <th nzWidth="20%">Edit</th>
             </tr>
         </thead>
         <tbody>
